Commit translated content

--- a/toc.yml
+++ b/toc.yml
@@ -371,6 +371,9 @@
             - name: 概念
               tocHref: /dotnet/csharp/concepts/
               topicHref: /dotnet/csharp/concepts/index
+            - name: .NET Compiler Platform SDK
+              tocHref: /dotnet/csharp/roslyn-sdk/
+              topicHref: /dotnet/csharp/roslyn-sdk/index
             - name: プログラミング ガイド
               tocHref: /dotnet/csharp/programming-guide/
               topicHref: /dotnet/csharp/programming-guide/index
