--- a/docs/csharp/quick-starts/numbers-in-csharp.yml
+++ b/docs/csharp/quick-starts/numbers-in-csharp.yml
@@ -4,147 +4,39 @@ metadata:
   title: "C# の数値"
   description: "数値型に関するこのクイック スタートでは、ブラウザーを使用して、対話形式で C# を学習します。 C# コードを記述し、ブラウザーで直接コードをコンパイルして実行した結果を確認します。"
   audience: Developer
+  ms.topic: get-started-article
   ms.custom: mvc
   level: Beginner
   nextTutorialHref: branches-and-loops
-  nextTutorialTitle: Branches and loops in C#
+  nextTutorialTitle: "C# の分岐とループ"
   displayType: two-column
   interactive: csharp
   ms.prod: .net
   ms.technology: devlang-csharp
-  ms.openlocfilehash: 8c89963107a770e27c9345ee38ed6249a8177f02
-  ms.sourcegitcommit: 6a9030eb5bd0f00e1d144f81958adb195cfb1f6f
+  ms.openlocfilehash: 7d18240b2871b5322c767287a737deda0b2ddefc
+  ms.sourcegitcommit: 8bde7a3432f30fc771079744955c75c58c4eb393
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 01/10/2018
+  ms.lasthandoff: 01/20/2018
 items:
 - durationInMinutes: 1
-  content: >
-    This quick start teaches you about the number types in C# interactively, using your browser to write C# and see the results of compiling and running your code. It contains a series of lessons that explore numbers and math operations in C#. These lessons teach you the fundamentals of the C# language.
+  content: "このクイック スタートでは C# の数値型について対話形式で学習できます。ブラウザーを使用して C# を記述し、コードをコンパイルして実行した結果を確認します。 このチュートリアルには、C# の数値と算術演算に関する一連のレッスンが含まれています。 これらのレッスンでは、C# 言語の基本を説明します。\n"
 - title: "整数の演算の確認"
   durationInMinutes: 4
-  content: "Run the following code in the interactive window. To do that, type the following code block in the interactive window and click the **Run** button:\n\n```csharp\nint a = 18;\nint b = 6;\nint c = a + b;\nConsole.WriteLine(c);\n```\n\nYou've just seen one of the fundamental math operations with integers. The `int` type represents an **integer**, a positive or negative whole number. You use the `+` symbol for addition. Other common mathematical operations for integers include:\n\n- `-` for subtraction\n- `*` for multiplication\n- `/` for division\n\n> [!TIP]\n> Throughout this quick start, you can explore on your own by modifying the code you've written in the interactive window. This quick start provides examples that you can try at each step.\n\nStart by exploring those different operations. Modify the third line to try each of these operations. After each edit, click the **Run** button.\n\nSubtraction:\n\n```csharp\nint c = a - b;\n```\n\nMultiplication:\n\n```csharp\nint c = a * b;\n```\n\nDivision: \n\n```csharp\nint c = a / b;\n```\n\nYou can also experiment by performing multiple mathematics operations in the same line, if you'd like.\n\n> [!TIP]\n> As you explore C# (or any programming language), you'll\n> make mistakes when you write code. The **compiler** will\n> find those errors and report them to you. When the output\n> contains error messages, look closely at the example code,\n> and the code in the interactive window to see what to fix.\n> That exercise will help you learn the structure of C# code.     \n\n> [!NOTE]\n> This online coding experience is in preview mode. If you encounter problems, please report them [on the dotnet/try repo](https://github.com/dotnet/try/issues).\n"
+  content: "対話型ウィンドウで次のコードを実行します。 そのためには、対話型ウィンドウで次のコード ブロックを入力し、**[実行]** をクリックします。\n\n```csharp\nint a = 18;\nint b = 6;\nint c = a + b;\nConsole.WriteLine(c);\n```\n\n整数を使用した基本的な算術演算の 1 つを確認しました。 `int` 型は、**整数**を表します (正の整数、または負の整数)。 加算には `+` 記号を使用します。 他の一般的な整数の算術演算には次のものがあります。\n\n- `-`: 減算\n- `*`: 乗算\n- `/`: 除算\n\n> [!TIP]\n> このクイック スタートでは、対話型ウィンドウで作成したコードを変更して、自分で確認できます。 このクイック スタートでは、各ステップで実際に試すことができる例を用意しています。\n\nまずは、上記の各種演算を実行してみます。 3 行目を変更して、各演算を試します。 編集が終わるごとに、**[実行]** をクリックします。\n\n減算：\n\n```csharp\nint c = a - b;\n```\n\n乗算：\n\n```csharp\nint c = a * b;\n```\n\n除算： \n\n```csharp\nint c = a / b;\n```\n\n好みで、同じ行で複数の算術演算を実行することもできます。\n\n> [!TIP]\n> C# (または何らかのプログラミング言語) について詳しく学習するに従い、コードを記述する際にミスをすることもあるでしょう。 **コンパイラ**は、そうしたエラーを発見して報告します。 エラー メッセージが出力された場合は、例のコードをよく確認して、対話型ウィンドウで修正すべきコードを見つけます。\n> こうした実習が C# コードの構造を理解するのに役立ちます。     \n\n> [!NOTE]\n> このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。\n"
 - title: "演算の順序の確認"
   durationInMinutes: 7
-  content: >
-    The C# language defines the precedence of different mathematics operations
-
-    with rules consistent with the rules you learned in mathematics.
-
-    Multiplication and division take precedence over addition and subtraction.
-
-    Explore that by running the following code in the interactive window:
-
-
-    ```csharp
-
-    int a = 5;
-
-    int b = 4;
-
-    int c = 2;
-
-    int d = a + b * c;
-
-    Console.WriteLine(d);
-
-    ```
-
-
-    The output demonstrates that the multiplication is performed before the addition.
-
-
-    You can force a different order of operation by adding parentheses around
-
-    the operation or operations you want performed first:
-
-
-    ```csharp
-
-    int a = 5;
-
-    int b = 4;
-
-    int c = 2;
-
-    int d = (a  + b) * c;
-
-    Console.WriteLine(d);
-
-    ```
-
-
-    Explore more by combining many different operations. Replace the fourth line above with something like this:
-
-
-    ```csharp
-
-    int d = (a + b) - 6 * c + (12 * 4) / 3 + 12;
-
-    ```
-
-
-    You may have noticed an interesting behavior for integers. Integer
-
-    division always produces an integer result, even when you'd expect
-
-    the result to include a decimal or fractional portion.
-
-
-    If you haven't seen this behavior, try the following:
-
-
-    ```csharp
-
-    int a = 7;
-
-    int b = 4;
-
-    int c = 3;
-
-    int d = (a  + b) / c;
-
-    Console.WriteLine(d);
-
-    ```
-
-
-    Click **Run** again to see the results.
-
-
-    > [!NOTE]
-
-    > This online coding experience is in preview mode. If you encounter problems, please report them [on the dotnet/try repo](https://github.com/dotnet/try/issues).
+  content: "C# 言語は、数学で学んだ規則と同じ規則で各演算の優先順位を定義します。\n乗算と除算は、加算と減算よりも優先されます。\n対話型ウィンドウで次のコードを実行して、実際に確認しましょう。\n\n```csharp\nint a = 5;\nint b = 4;\nint c = 2;\nint d = a + b * c;\nConsole.WriteLine(d);\n```\n\n出力を見ると、加算の前に乗算が実行されていることがわかります。\n\n演算の周りに丸かっこを追加する、または最初に実行したい演算を追加することで、演算の順序を変えることができます。\n\n```csharp\nint a = 5;\nint b = 4;\nint c = 2;\nint d = (a  + b) * c;\nConsole.WriteLine(d);\n```\n\nさまざまな演算を多数組み合わせて、他にも試してみましょう。 上記の 4 行目を次のように置き換えます。\n\n```csharp\nint d = (a + b) - 6 * c + (12 * 4) / 3 + 12;\n```\n\n整数について面白い動作をしていることに気づいたでしょうか。 結果に小数点や小数部分が含まれると予想される場合でも、整数の除算は常に整数の結果を算出します。\n\nこの動作を確認できない場合は、次のコードを試してください。\n\n```csharp\nint a = 7;\nint b = 4;\nint c = 3;\nint d = (a  + b) / c;\nConsole.WriteLine(d);\n```\n\nもう一度 **[実行]** をクリックして結果を確認します。\n\n> [!NOTE]\n> このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。\n"
 - title: "整数の有効桁数と制限の確認"
   durationInMinutes: 5
-  content: "That last sample showed you that integer division truncates the result.\nYou can get the **remainder** by using the **modulo** operator, the `%` character:\n\n```csharp\nint a = 7;\nint b = 4;\nint c = 3;\nint d = (a  + b) / c;\nint e = (a + b) % c;\nConsole.WriteLine($\"quotient: {d}\");\nConsole.WriteLine($\"remainder: {e}\");\n```\n\nThe C# integer type differs from mathematical integers in one other\nway: the `int` type has minimum and maximum limits. Run this code\nin the interactive window to see those limits:\n\n```csharp\nint max = int.MaxValue;\nint min = int.MinValue;\nConsole.WriteLine($\"The range of integers is {min} to {max}\");\n```\n\nIf a calculation produces a value that exceeds those limits, you\nhave an **underflow** or **overflow** condition. The answer appears\nto wrap from one limit to the other. Add these two lines to the interactive\nwindow to see an example:\n\n```csharp\nint what = max + 3;\nConsole.WriteLine($\"An example of overflow: {what}\");\n```\n\nNotice that the answer is very close to the minimum (negative) integer. It's\nthe same as `min + 2`. \nThe addition operation **overflowed** the allowed values for integers.\nThe answer is a very large negative number because an overflow \"wraps around\"\nfrom the largest possible integer value to the smallest.\n\nThere are other numeric types with different limits and precision that you\nwould use when the `int` type doesn't meet your needs. Let's explore those next.\n\n> [!NOTE]\n> This online coding experience is in preview mode. If you encounter problems, please report them [on the dotnet/try repo](https://github.com/dotnet/try/issues).\n"
+  content: "この最後のサンプルでは、整数の除算における結果の切り捨てについて確認します。\n**modulo** 演算子 (`%` 文字) を使用して、**剰余**を得ることができます。\n\n```csharp\nint a = 7;\nint b = 4;\nint c = 3;\nint d = (a  + b) / c;\nint e = (a + b) % c;\nConsole.WriteLine($\"quotient: {d}\");\nConsole.WriteLine($\"remainder: {e}\");\n```\n\nC# の整数型は算術における整数ともう 1 つ異なる点があります。それは `int` 型には最小値と最大値の制限があるということです。 対話型ウィンドウでこのコードを実行し、これらの制限を確認しましょう。\n\n```csharp\nint max = int.MaxValue;\nint min = int.MinValue;\nConsole.WriteLine($\"The range of integers is {min} to {max}\");\n```\n\n計算によってこれらの制限を超える値が作られると、**アンダーフロー**または**オーバーフロー**の状態になります。 計算の結果が 1 つの制限からもう 1 つの制限に折り返されているように見えます。 対話型ウィンドウに次の 2 行を追加して、例を確認します。\n\n```csharp\nint what = max + 3;\nConsole.WriteLine($\"An example of overflow: {what}\");\n```\n\n計算の結果が最小値の (負の) 整数に極めて近いことに注目してください。 これは `min + 2` と同じです。 加算演算が許容された整数値を**オーバーフロー**しました。\n整数がオーバーフローして最大値から最小値に ”折り返され” たため、計算結果が非常に大きな負の値になっています。\n\n他にもさまざまな制限や有効桁数を持つ数値型があり、`int` 型がご自分のニーズと合わない場合は、そちらも使用できます。 次はその別の数値型を見ていきます。\n\n> [!NOTE]\n> このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。\n"
 - title: "double 型の処理"
   durationInMinutes: 5
-  content: "The `double` numeric type represents a double-precision floating point\nnumber. Those terms may be new to you. A **floating point** number is\nuseful to represent non-integral numbers that may be very large or small\nin magnitude. **Double-precision** means that these numbers are stored\nusing greater precision than **single-precision**. On modern computers,\nit is more common to use double precision than single precision numbers.\nLet's explore. Try the following code in the interactive window and see the result:\n\n```csharp\ndouble a = 5;\ndouble b = 4;\ndouble c = 2;\ndouble d = (a  + b) / c;\nConsole.WriteLine(d);\n```\n\nNotice that the answer includes the decimal portion of the quotient. Try a slightly\nmore complicated expression with doubles:\n\n```csharp\ndouble a = 19;\ndouble b = 23;\ndouble c = 8;\ndouble d = (a  + b) / c;\nConsole.WriteLine(d);\n```\n\nThe range of a double value is much greater than integer values. Try the following\ncode in the interactive window:\n\n```csharp\ndouble max = double.MaxValue;\ndouble min = double.MinValue;\nConsole.WriteLine($\"The range of double is {min} to {max}\");\n```\n\nThese values are printed out in scientific notation. The number to\nthe left of the `E` is the significand. The number to the right is the exponent,\nas a power of 10. \n\nJust like decimal numbers in math, doubles in C# can have rounding errors. Try this code:\n\n```csharp\ndouble third = 1.0 / 3.0;\nConsole.WriteLine(third);\n```\n\nYou know that `0.3` repeating is not exactly the same as `1/3`.\n\n***Challenge***\n\nTry other calculations with large numbers, small numbers, multiplication\nand division using the `double` type.  Try more complicated calculations.\n\n> [!NOTE]\n> This online coding experience is in preview mode. If you encounter problems, please report them [on the dotnet/try repo](https://github.com/dotnet/try/issues).\n"
+  content: "`double` 数値型は、倍精度浮動小数点数を表します。 こうした用語を初めて見た人もいるかもしれません。 **浮動小数点**数は、非常に大きな、または非常に小さな、整数ではない数値を表すのに役立ちます。 **倍精度**は、そうした数値が**単精度**よりも大きな有効桁数を使用して格納されることを意味しています。 最近のコンピューターでは、単精度よりも倍精度の数値を使用する方が一般的です。\n確認してみましょう。 対話型ウィンドウで次のコードを実行して結果を確認します。\n\n```csharp\ndouble a = 5;\ndouble b = 4;\ndouble c = 2;\ndouble d = (a  + b) / c;\nConsole.WriteLine(d);\n```\n\n計算結果に商の小数部分が含まれていることに注目してください。 double 型を使用して、もう少し複雑な式を試します。\n\n```csharp\ndouble a = 19;\ndouble b = 23;\ndouble c = 8;\ndouble d = (a  + b) / c;\nConsole.WriteLine(d);\n```\n\ndouble 値は整数値よりも範囲が大きくなります。 対話型ウィンドウで次のコードを実行します。\n\n```csharp\ndouble max = double.MaxValue;\ndouble min = double.MinValue;\nConsole.WriteLine($\"The range of double is {min} to {max}\");\n```\n\nこれらの値は指数表記で出力されます。 `E` の左側は有効数字です。 右側の数値は指数であり、10 の累乗です。 \n\n算術における 10 進数と同じように、C# における double には丸め誤差が発生することがあります。 次のコードを試してみましょう。\n\n```csharp\ndouble third = 1.0 / 3.0;\nConsole.WriteLine(third);\n```\n\n`0.3` の循環小数は `1/3` と完全に同じではありません。\n\n***課題***\n\n`double` 型を使用して、大きい値や小さい値、乗算、除算などの計算してみましょう。  もっと複雑な計算を試してみてください。\n\n> [!NOTE]\n> このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。\n"
 - title: "固定小数点型の処理"
   durationInMinutes: 8
-  content: "You've seen the basic numeric types in C#: integers and doubles.  There is one\nother type to learn: the `decimal` type. The `decimal` type has a smaller\nrange but greater precision than `double`. The term **fixed point** means\nthat the decimal point (or binary point) doesn't move. Let's take a look:\n\n```csharp\ndecimal min = decimal.MinValue;\ndecimal max = decimal.MaxValue;\nConsole.WriteLine($\"The range of the decimal type is {min} to {max}\");\n```\n\nNotice that the range is smaller than the `double` type. You can see the greater\nprecision with the decimal type by trying the following code:\n\n```csharp\ndouble a = 1.0;\ndouble b = 3.0;\nConsole.WriteLine(a / b);\n\ndecimal c = 1.0M;\ndecimal d = 3.0M;\nConsole.WriteLine(c / d);\n```\n\nThe `M` suffix on the numbers is how you indicate that a constant should use the\n`decimal` type.\n\nNotice that the math using the decimal type has more digits to the right\nof the decimal point. \n\n***Challenge***\n\nNow that you've seen the different numeric types, write code that calculates\nthe area of a circle whose radius is 2.50 inches. Remember that the area of a circle\nis the radius squared multiplied by PI. One hint: .NET contains a constant\nfor PI, <xref:System.Math.PI?displayProperty=nameWithType> that you can use for that value. \n\n> [!NOTE]\n> This online coding experience is in preview mode. If you encounter problems, please report them [on the dotnet/try repo](https://github.com/dotnet/try/issues).\n\nYou should get an answer between 19 and 20.\n"
+  content: "C# の基本的な数値型である整数と double について見てきました。  もう 1 つ知っておくべき型として、`decimal` 型があります。 `decimal` 型は、`double` 型よりも範囲は小さいですが、有効桁数が大きい型です。 **固定小数点**という用語は、小数点 (またはバイナリの小数点) が動かないことを意味しています。 では、始めましょう。\n\n```csharp\ndecimal min = decimal.MinValue;\ndecimal max = decimal.MaxValue;\nConsole.WriteLine($\"The range of the decimal type is {min} to {max}\");\n```\n\n`double` 型よりも範囲が小さいことに注目してください。 次のコードを実行すると、decimal 型では有効桁数がより大きいことを確認できます。\n\n```csharp\ndouble a = 1.0;\ndouble b = 3.0;\nConsole.WriteLine(a / b);\n\ndecimal c = 1.0M;\ndecimal d = 3.0M;\nConsole.WriteLine(c / d);\n```\n\n数値の末尾の `M` は、定数では `decimal` 型を使用する必要があることを示しています。\n\ndecimal 型を使用した演算では、小数点の右側の桁数がより多いことに注目してください。 \n\n***課題***\n\nさまざまな数値型を確認したので、次は半径が 2.50 インチの円の面積を計算するコードを記述してみます。 円の面積は、半径の 2 乗 x 円周率です。 ヒント: .NET には <xref:System.Math.PI?displayProperty=nameWithType> という円周率の定数があり、その値を使用できます。 \n\n> [!NOTE]\n> このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。\n\n答えは 19 と 20 の間になるはずです。\n"
 - title: "課題完了"
   durationInMinutes: 1
-  content: >
-    Did you come up with something like this?
-
-
-    ```csharp
-
-    double radius = 2.50;
-
-    double area = Math.PI * radius * radius;
-
-    Console.WriteLine(area);
-
-    ```
-
-
-    Try some other formulas if you'd like.
-
-
-    > [!NOTE]
-
-    > This online coding experience is in preview mode. If you encounter problems, please report them [on the dotnet/try repo](https://github.com/dotnet/try/issues).
-- content: "You've completed the \"Numbers in C#\" quick start. \n\nYou can continue these quick starts on your own development environment. Learn the basics of [local development](local-environment.md) and then pick a quick start. You can try this same exercise, move directly to the next quick start, or start again at with the [numbers in C#](numbers-in-csharp-local.md) quickstart.\n\nYou can learn more about numbers in C# in the following topics:\n\n[Integral Types Table](../language-reference/keywords/integral-types-table.md)   \n[Floating-Point Types Table](../language-reference/keywords/floating-point-types-table.md)   \n[Built-In Types Table](../language-reference/keywords/built-in-types-table.md)   \n[Implicit Numeric Conversions Table](../language-reference/keywords/implicit-numeric-conversions-table.md)   \n[Explicit Numeric Conversions Table](../language-reference/keywords/explicit-numeric-conversions-table.md)\0"
+  content: "コードは次のようになりましたか?\n\n```csharp\ndouble radius = 2.50;\ndouble area = Math.PI * radius * radius;\nConsole.WriteLine(area);\n```\n\nお好みで他の数式を試してみてください。\n\n> [!NOTE]\n> このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。\n"
+- content: "これで \"C# の数値\" に関するクイック スタートは終了です。 \n\nこれまでのクイック スタートを、ご自身の開発環境でも行ってください。 [ローカル開発](local-environment.md)の基本を学習してから、クイック スタートを選択してください。 これと同じ演習を試すことも、次のクイック スタートに直接移動することも、再度「[C# の数値](numbers-in-csharp-local.md)」クイック スタートから始めることもできます。\n\nC# の数値の詳細については、次のトピックで学習できます。\n\n[整数型の一覧表](../language-reference/keywords/integral-types-table.md)   \n[浮動小数点型の一覧表](../language-reference/keywords/floating-point-types-table.md)   \n[組み込み型の一覧表](../language-reference/keywords/built-in-types-table.md)   \n[暗黙的な数値変換の一覧表](../language-reference/keywords/implicit-numeric-conversions-table.md)   \n[明示的な数値変換の一覧表](../language-reference/keywords/explicit-numeric-conversions-table.md)\0"
