Commit translated content

--- a/toc.yml
+++ b/toc.yml
@@ -6,7 +6,7 @@
       tocHref: /dotnet/
       topicHref: /dotnet/index
       items:
-        - name: API リファレンス
+        - name: .NET API ブラウザー
           tocHref: /dotnet/api/
           topicHref: /dotnet/api/index
         - name: .NET のガイド
