--- a/docs/csharp/quick-starts/hello-world.yml
+++ b/docs/csharp/quick-starts/hello-world.yml
@@ -13,11 +13,11 @@ metadata:
   ms.custom: mvc
   ms.prod: .net
   ms.technology: devlang-csharp
-  ms.openlocfilehash: 8d7e98e8dbd3e9b49269ce0d1cb1900059715b54
-  ms.sourcegitcommit: 935d5267c44f9bce801468ef95f44572f1417e8c
+  ms.openlocfilehash: 23070437088b71fd8f620d29b014226e34a51d5e
+  ms.sourcegitcommit: 2e8acae16ae802f2d6d04e3ce0a6dbf04e476513
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/28/2018
+  ms.lasthandoff: 04/18/2018
 items:
 - durationInMinutes: 1
   content: >
@@ -27,7 +27,7 @@ items:
   content: "対話型ウィンドウで次のコードを実行します。 そのためには、対話型ウィンドウで次のコード ブロックを入力し、**[実行]** をクリックします。\n\n```csharp\nConsole.WriteLine(\"Hello World!\");\n```\n\nおめでとうございます!  最初の C# プログラムを実行しました。 これは \"Hello World!\" というメッセージを出力する単純なプログラムです。 <xref:System.Console.WriteLine%2A?displayProperty=nameWithType> メソッドを使用してこのメッセージを出力しました。 `Console` は、コンソール ウィンドウを表す型です。 `WriteLine` は、そのテキスト コンソールに 1 行のテキストを出力する `Console` 型の 1 つのメソッドです。\n\n次に進んで、さらに詳しく見てみましょう。 このレッスンの残りの部分では、C# においてテキストを表す `string` 型の機能を確認します。 `Console` 型と同じように、`string` 型にもメソッドがあります。 `string` メソッドはテキストを処理します。 \n\n> [!NOTE]\n> このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。\n"
 - title: 変数の宣言と使用
   durationInMinutes: 3
-  content: "最初のプログラムでは、`string` の \"Hello World!\" を 画面に出力しました。 \n\n> [!TIP]\n> C# (または何らかのプログラミング言語) について詳しく学習するに従い、コードを記述する際にミスをすることもあるでしょう。 **コンパイラ**は、そうしたエラーを発見して報告します。 エラー メッセージが出力された場合は、例のコードをよく確認して、対話型ウィンドウで修正すべきコードを見つけます。\n> こうした実習が C# コードの構造を理解するのに役立ちます。 \n\n最初のプログラムは、1 つのメッセージしか出力できません。 **変数**を使用すると、もっと役立つプログラムを記述できます。 **変数**は、同じコードを別の値で実行するのに使用できる記号です。 試してみましょう。 対話型ウィンドウで記述したコードを次のコードに置き換えます。\n\n```csharp\nstring aFriend = \"Bill\";\nConsole.WriteLine(aFriend);\n```\n\n最初の行で変数 `aFriend` を宣言し、その変数に \"Bill\" という値を代入しています。 2 番目の行でその名前を出力しています。\n\n宣言した変数に別の値を代入できます。 この名前を友人の名前に変更できます。 対話型ウィンドウで、先ほど追加したコードのあとに次の 2 行を追加します。\n\n```csharp\naFriend = \"Maria\";\nConsole.WriteLine(aFriend);\n```\n\n`aFriend` 変数に格納された値に基づいて、コードの同じ行に 2 つの異なるメッセージが表示されていることに注目してください。\n\nお気付きかと思いますが、最後の 2 つのメッセージから \"Hello\" という言葉がなくなっています。 修正しましょう。  メッセージを出力する行を次のように変更します。\n\n```csharp\nConsole.WriteLine(\"Hello \" + aFriend);\n```\n\nもう一度 **[実行]** をクリックして結果を確認します。\n\nさらに進めると、`+` を利用して出力する文字列の作成が難しくなります。 [文字列補間](../language-reference/tokens/interpolated.md)を利用すれば、より簡潔で読みやすい方法で文字列をつなぎ合わせることができます。\n\n文字列の開始引用符の前に `$` を追加する場合、中かっこの文字列の内部に、`aFriend` 変数など、式を含めることができます。\n\n\n```csharp\nConsole.WriteLine($\"Hello {aFriend}\");\n```\n\nもう一度 **[実行]** をクリックして結果を確認します。\n\n> [!NOTE]\n> このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。\n"
+  content: "最初のプログラムでは、`string` の \"Hello World!\" を 画面に出力しました。 \n\n> [!TIP]\n> C# (または何らかのプログラミング言語) について詳しく学習するに従い、コードを記述する際にミスをすることもあるでしょう。 **コンパイラ**は、そうしたエラーを発見して報告します。 エラー メッセージが出力された場合は、例のコードをよく確認して、対話型ウィンドウで修正すべきコードを見つけます。\n> こうした実習が C# コードの構造を理解するのに役立ちます。 \n\n最初のプログラムは、1 つのメッセージしか出力できません。 **変数**を使用すると、もっと役立つプログラムを記述できます。 **変数**は、同じコードを別の値で実行するのに使用できる記号です。 試してみましょう。 対話型ウィンドウで記述したコードを次のコードに置き換えます。\n\n```csharp\nstring aFriend = \"Bill\";\nConsole.WriteLine(aFriend);\n```\n\n最初の行で変数 `aFriend` を宣言し、その変数に \"Bill\" という値を代入しています。 2 番目の行でその名前を出力しています。\n\n宣言した変数に別の値を代入できます。 この名前を友人の名前に変更できます。 対話型ウィンドウで、先ほど追加したコードのあとに次の 2 行を追加します。\n\n```csharp\naFriend = \"Maira\";\nConsole.WriteLine(aFriend);\n```\n\n`aFriend` 変数に格納された値に基づいて、コードの同じ行に 2 つの異なるメッセージが表示されていることに注目してください。\n\nお気付きかと思いますが、最後の 2 つのメッセージから \"Hello\" という言葉がなくなっています。 修正しましょう。  メッセージを出力する行を次のように変更します。\n\n```csharp\nConsole.WriteLine(\"Hello \" + aFriend);\n```\n\nもう一度 **[実行]** をクリックして結果を確認します。\n\nさらに進めると、`+` を利用して出力する文字列の作成が難しくなります。 [文字列補間](../language-reference/tokens/interpolated.md)を利用すれば、より簡潔で読みやすい方法で文字列をつなぎ合わせることができます。\n\n文字列の開始引用符の前に `$` を追加する場合、中かっこの文字列の内部に、`aFriend` 変数など、式を含めることができます。\n\n\n```csharp\nConsole.WriteLine($\"Hello {aFriend}\");\n```\n\nもう一度 **[実行]** をクリックして結果を確認します。\n\n> [!NOTE]\n> このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。\n"
 - title: 文字列の処理
   durationInMinutes: 5
   content: >
