--- a/docs/csharp/quick-starts/interpolated-strings.yml
+++ b/docs/csharp/quick-starts/interpolated-strings.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Tutorial
-title: C# の挿入文字列
+title: C# における文字列補間
 metadata:
-  title: 挿入文字列の対話形式チュートリアル - C# クイックスタート
-  description: このチュートリアルでは、ブラウザーを使用して、対話形式で C# の挿入文字列機能を使用します。 C# コードを記述し、ブラウザーで直接コードをコンパイルして、実行した結果を確認します。
+  title: 文字列補間の対話形式チュートリアル - C# クイックスタート
+  description: このチュートリアルでは、ブラウザーを使用して、対話形式で C# の文字列補間機能の詳細を確認します。 C# コードを記述し、ブラウザーで直接コードをコンパイルして、実行した結果を確認します。
   audience: Developer
   ms.custom: mvc
   ms.topic: get-started-article
@@ -11,25 +11,25 @@ metadata:
   interactive: csharp
   nextTutorialHref: list-collection
   nextTutorialTitle: C# のコレクション
-  ms.openlocfilehash: 7e1de34c9075826a6fcb6bf71cb01bfbd5c215ca
-  ms.sourcegitcommit: 935d5267c44f9bce801468ef95f44572f1417e8c
+  ms.openlocfilehash: 03d46a90033d480046b63bdec3c4c83ab39c2f56
+  ms.sourcegitcommit: 2e8acae16ae802f2d6d04e3ce0a6dbf04e476513
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/28/2018
+  ms.lasthandoff: 04/18/2018
 items:
 - durationInMinutes: 2
   content: >
-    このクイックスタートでは、C# で挿入文字列を使用して、対話形式で単一の出力文字列に値を挿入する方法を説明します。 ブラウザーを使用して C# コードを記述し、コードのコンパイルと実行の結果をすぐに確認することができます。 クイックスタートには、文字列を連結し、値を文字列に挿入し、それらの値の書式をさまざまな方法で設定する、一連のレッスンが含まれています。
+    このクイックスタートでは、[文字列補間](../language-reference/tokens/interpolated.md)を使用して、単一の文字列に値を挿入する方法を説明します。 また、結果の文字列でそれらの値のテキスト表現を制御する方法についても説明します。 ブラウザーを使用して C# コードを記述および実行し、生成された結果をすぐに確認することができます。
 - title: 挿入文字列を作成する
   durationInMinutes: 2
-  content: "対話型ウィンドウで次のコードを実行します。 そのためには、対話型ウィンドウで次のコード ブロックを入力し (\"\\<name>\" を自分の名前に置き換える)、**[実行]** ボタンをクリックします。\n\n```csharp\nvar name = \"<name>\";\nConsole.WriteLine($\"Hello, {name}. It's a pleasure to meet you!\");\n```\n\nプログラムを実行すると、あいさつ文に自分の名前を含む単一の文字列が表示されます。 <xref:System.Console.WriteLine%2A> メソッド呼び出しに含まれる文字列は、*挿入文字列*です。 これは、埋め込みコードを含む文字列から (*結果文字列*という) 単一の文字列を構築できる一種のテンプレートです。 挿入文字列は、文字列に値を挿入したり、文字列を (結合) 連結したりする場合に特に便利です。 \n\nこの簡単な例には、すべての挿入文字列に含める必要がある次の 2 つの要素が含まれています。 \n\n- 始まりの引用符文字の前の `$` で始まる文字列リテラル。 `$` シンボルと引用符文字の間にスペースを挿入することはできません  (スペースが含まれている場合の動作を確認したい場合は、対話型ウィンドウで `$` 文字の後にスペースを挿入し、**[実行]** ボタンをクリックします。 C# コンパイラには \"予期しない '$' 文字です\" と示されます)。 \n\n- 1 つ以上の*挿入式*。 挿入式は、始めかっこと終わりかっこ (`{` と `}`) で示されます。 かっこ内に (`null` を含む) 値を返す C# 式を配置できます。 \n\nその他のいくつかのデータ型を持つ挿入文字列の例をさらにいくつか試してみましょう。\n\n> [!NOTE]\n> このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。\n"
+  content: "対話型ウィンドウで次のコードを実行します。 そのためには、対話型ウィンドウでこのコードを入力し (\"`\\<name>`\" を自分の名前に置き換えて)、**[実行]** を選択します。\n\n```csharp\nvar name = \"<name>\";\nConsole.WriteLine($\"Hello, {name}. It's a pleasure to meet you!\");\n```\n\nコードを実行すると、**出力**にはあいさつ文に自分の名前を含む文字列が表示されます。 <xref:System.Console.WriteLine%2A> メソッド呼び出しの文字列引数は、*挿入文字列*です。 これは、埋め込みコードを含む文字列から (*結果文字列*という) 単一の文字列を構築できる一種のテンプレートです。 挿入文字列は、文字列に値を挿入したり、いくつかの文字列を (結合) 連結したりする場合に特に便利です。 \n\n上記の例には、すべての挿入文字列に含める必要がある次の 2 つの要素が含まれています。 \n\n- 始まりの引用符文字の前の `$` で始まる文字列リテラル。 `$` シンボルと引用符文字の間にスペースを挿入することはできません  (スペースが含まれている場合の動作を確認したい場合は、対話型ウィンドウで `$` 文字の後にスペースを挿入し、更新されたコードを実行します。 C# コンパイラには \"予期しない '$' 文字です\" と示されます)。 \n\n- 1 つ以上の*挿入式*。 挿入式は、始めかっこと終わりかっこ (`{` と `}`) で示されます。 かっこ内に (`null` を含む) 値を返す C# 式を配置できます。 \n\nその他のいくつかのデータ型を持つ文字列補間の例をさらにいくつか試してみましょう。\n\n> [!NOTE]\n> このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。\n"
 - title: さまざまなデータ型を含める
-  durationInMinutes: 3
-  content: "前のクイックスタートでは、挿入文字列を使用して、1 つの文字列内に別の文字列を挿入しましたが、 挿入文字列式を任意のデータ型にすることもできます。 複数のデータ型の値を持つ挿入文字列を試してみましょう。 \n\n次の例には、`Vegetable` オブジェクト、`Unit` 列挙型のメンバー、<xref:System.DateTime> 値、<xref:System.Decimal> 値を持つ挿入式が含まれています。 これを対話型ウィンドウで実行します。\n\n```csharp\npublic class Vegetable\n{\n   public Vegetable(string name) => Name = name;\n\n   public string Name { get; }\n\n   public override string ToString() => Name;\n}\n\npublic class Example\n{\n   public enum Unit { item, pound, ounce, dozen };\n\n   public static void Main()\n   {\n      var item = new Vegetable(\"eggplant\");\n      var date = DateTime.Now;\n      var price = 1.99m;\n      var unit = Unit.item;\n      Console.WriteLine($\"On {date}, the price of {item} was {price} per {unit}.\");\n   }\n}\n```\n\n挿入式の 1 つには、コンソールに表示される結果文字列の `item` オブジェクトが含まれており、この場合、\"eggplant\" という文字列が結果文字列に挿入されることに注意してください。 これは、挿入式の型が文字列でない場合、C# コンパイラでは次の処理が行われるためです。\n\n- 挿入式が `null` の場合、挿入式は空の文字列 (\"\"、または <xref:System.String.Empty?displayProperty=nameWithType>) を返します。\n\n- 挿入式が `null` でない場合、挿入式の型の `ToString` メソッドが呼び出されます。 コメント シンボル (`//`) を前に配置して、例の `Vegetable.ToString` メソッドの定義をコメント アウトすることで、これをテストできます。 出力では、\"eggplant\" という文字列が完全修飾型名 (型名と共に C# REPL によって定義される名前空間) に置き換えられます。これは、<xref:System.Object.ToString?displayProperty=nameWithType> メソッドの既定の動作です。   \n\nこの例の出力では、日付の精度が高すぎ (エッグプラントの価格が 2 つ目の値により変化しない)、価格の値は通貨の単位を示していません。 次の手順では、挿入式によって返される文字列の形式を制御することで、こうした問題を修正する方法について説明します。\n\n> [!NOTE]\n> このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。\n"
+  durationInMinutes: 5
+  content: "前の手順では、文字列補間を使用して、1 つの文字列内に別の文字列を挿入しましたが、 挿入式の結果を任意のデータ型にすることもできます。 挿入文字列にさまざまなデータ型の値を含めてみましょう。 \n\n次の例では、`Name` [ プロパティ](../properties.md)と `ToString` メソッドを持つ、ユーザー指定データ型 `Vegetable` を定義します。 クライアント コードは、そのメソッドを使用して、`Vegetable` インスタンスの文字列表現を取得できます。 この例の `Vegetable.ToString` メソッドでは、`Vegetable` コンストラクター `Vegetable(string name) => Name = name;` で初期化される `Name` プロパティの値を返します。 次に、`new` キーワードを使用して、コンストラクター `Vegetable` の name パラメーターを指定し、`Vegetable` 型のインスタンスを作成します。 最後に、インスタンスを挿入文字列に含めます。ここには、<xref:System.DateTime> 値、<xref:System.Decimal> 値、`Unit` [列挙](../programming-guide/enumeration-types.md)値も含まれます。 対話型ウィンドウで次のコードを実行します。\n\n```csharp\npublic class Vegetable\n{\n   public Vegetable(string name) => Name = name;\n\n   public string Name { get; }\n\n   public override string ToString() => Name;\n}\n\npublic enum Unit { item, pound, ounce, dozen };\n\nvar item = new Vegetable(\"eggplant\");\nvar date = DateTime.Now;\nvar price = 1.99m;\nvar unit = Unit.item;\nConsole.WriteLine($\"On {date}, the price of {item} was {price} per {unit}.\");\n```\n\n挿入文字列の挿入式 `item` は、結果の文字列のテキスト \"eggplant\" に解決されることに注意してください。 これは、式の結果の型が文字列でない場合に、結果が次の方法で文字列に解決されるためです。\n\n- 挿入式が `null` の場合、空の文字列 (\"\"、または <xref:System.String.Empty?displayProperty=nameWithType>) が使用されます。\n\n- 挿入式が `null` でない場合、通常、結果の型の `ToString` メソッドが呼び出されます。 `Vegetable.ToString` メソッドの実装を更新して、これをテストすることができます。 すべての C# のデータ型にこのメソッドの実装が含まれるため、`ToString` メソッドを実装することはできません。 これをテストするには、例の `Vegetable.ToString` メソッドの定義をコメント アウトします (この操作を行うには、コメント シンボル `//` を前に配置します)。 出力では、\"eggplant\" という文字列が完全修飾型名 (型名と共に C# REPL によって定義される名前空間) に置き換えられます。これは、<xref:System.Object.ToString?displayProperty=nameWithType> メソッドの既定の動作です。 列挙型の `ToString` メソッドの既定の動作は、列挙の定義で使用される値の文字列表現を返すためのものです。   \n\nこの例の出力では、日付の精度が高すぎ (\"eggplant\" の価格は毎秒変更されることはありません)、価格の値は通貨の単位を示していません。 次の手順では、式の結果における文字列表現の書式を制御することで、こうした問題を修正する方法について説明します。\n\n> [!NOTE]\n> このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。\n"
 - title: 挿入式の書式設定を制御する
   durationInMinutes: 5
   content: >
-    前のレッスンでは、適切に書式設定されていない 2 つの文字列が結果文字列に挿入されました。 1 つは、日付のみが適切な日時の値でした。 もう 1 つは、通貨単位を示さない価格でした。 両方の問題には簡単に対処することができます。 挿入式に、特定の型の書式設定を制御する*書式指定文字列*を含めることができます。 前の例の `Console.WriteLine` 呼び出しを変更し、次の行に示すように、日付と価格のフィールドの書式指定子を含めます。
+    前の手順では、適切に書式設定されていない 2 つの文字列が結果文字列に挿入されました。 1 つは、日付のみが適切な日時の値でした。 もう 1 つは、通貨単位を示さない価格でした。 両方の問題には簡単に対処することができます。 文字列補間では、特定の型の書式設定を制御する*書式指定文字列*を指定することができます。 前の例の `Console.WriteLine` 呼び出しを変更し、次の行に示すように、日付と価格の式の書式指定文字列を含めます。
 
 
     ```csharp
@@ -39,16 +39,16 @@ items:
     ```
 
 
-    コロンと書式指定文字列を持つ挿入式に従って、書式指定文字列を指定します。 "d" は、短い日付形式を表す[標準の日時書式設定文字列](../../standard/base-types/standard-date-and-time-format-strings.md#the-short-date-d-format-specifier)です。 "C2" は、小数点以下が 2 桁の通貨値として数値を表す[標準の数値書式指定文字列](../../standard/base-types/standard-numeric-format-strings.md#the-currency-c-format-specifier)です。
+    コロン (":") と書式指定文字列を持つ挿入式に従って、書式指定文字列を指定します。 "d" は、短い日付形式を表す[標準の日時書式設定文字列](../../standard/base-types/standard-date-and-time-format-strings.md#the-short-date-d-format-specifier)です。 "C2" は、小数点以下が 2 桁の通貨値として数値を表す[標準の数値書式指定文字列](../../standard/base-types/standard-numeric-format-strings.md#the-currency-c-format-specifier)です。
 
 
-    .NET Standard ライブラリの多くの型で、定義済みの書式指定文字列セットがサポートされています。 これらには、数値型と日時型がすべて含まれます。 書式指定文字列をサポートする型の完全なリストについては、「[.Net 型の書式設定](../../standard/base-types/formatting-types.md)」記事の「[.NET クラス ライブラリの型および書式指定文字列](../../standard/base-types/formatting-types.md#stringRef)」を参照してください。 どの型でも書式指定文字列セットをサポートすることができ、既存の型のカスタム書式指定を提供するカスタム書式指定拡張機能を開発することもできます。 <xref:System.ICustomFormatter> 実装を提供することによるカスタム書式指定については、「[.Net 型の書式設定](../../standard/base-types/formatting-types.md)」記事の「[ICustomFormatter を使用したカスタム書式設定](../../standard/base-types/formatting-types.md#custom-formatting-with-icustomformatter)」を参照してください。
+    .NET ライブラリの多くの型で、定義済みの書式指定文字列セットがサポートされています。 これらには、数値型と日時型がすべて含まれます。 書式指定文字列をサポートする型の完全なリストについては、「[.Net 型の書式設定](../../standard/base-types/formatting-types.md)」記事の「[.NET クラス ライブラリの型および書式指定文字列](../../standard/base-types/formatting-types.md#stringRef)」を参照してください。
 
 
-    **.NET エディター**で書式指定文字列を変更してみて、日時と数値の書式設定にどのように影響するかを確認します。 `{date:d}` の "d" を "t" (短い時刻形式を表示する)、"y" (年と月を表示する)、"yyyy" (4 桁の数字として年を表示する) に変更します。 `{price:C2}` "C2" を "e" (指数表記の場合) と "F3" (小数点以下が 3 桁の数値の場合) に変更します。
+    この例で書式指定文字列を変更してみて、日時と数値の書式設定にどのように影響するかを確認します。 `{date:d}` の "d" を "t" (短い時刻形式を表示する)、"y" (年と月を表示する)、"yyyy" (4 桁の数字として年を表示する) に変更します。 `{price:C2}` "C2" を "e" (指数表記の場合) と "F3" (小数点以下が 3 桁の数値の場合) に変更します。
 
 
-    書式設定を制御するだけでなく、挿入式によって返される文字列のフィールドの幅と配置を制御することもできます。 次の手順では、この方法を説明します。
+    書式設定を制御するだけでなく、結果の文字列に含まれる書式指定された文字列のフィールドの幅と配置を制御することもできます。 次の手順では、この方法を説明します。
 
 
     > [!NOTE]
@@ -56,5 +56,43 @@ items:
     > このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。
 - title: 挿入式のフィールドの幅と配置を制御する
   durationInMinutes: 6
-  content: "通常、挿入式によって返される文字列が結果文字列に含まれている場合、先頭スペースも末尾スペースもありません。 特にデータ セットを処理する場合、挿入式ではフィールドの幅とその配置を指定することができます。 そのためには、次のコードを実行します。\n\n```csharp\n  var inventory = new Dictionary<string, int>();\n  inventory.Add(\"hammer, ball pein\", 18);\n  inventory.Add(\"hammer, cross pein\", 5);\n  inventory.Add(\"screwdriver, Phillips #2\", 14);\n\n  Console.WriteLine($\"Inventory on {DateTime.Now:d}\");\n  Console.WriteLine(\" \");\n  Console.WriteLine($\"{\"Item\",-25}    {\"Quantity\",10}\");\n  Console.WriteLine(\" \"); \n  foreach (var item in inventory)\n     Console.WriteLine($\"{item.Key,-25}     {item.Value,10}\");\n```\n\n項目名は左揃えになり、その数量は右揃えになります。 式の後にコンマ (\",\") を追加し、フィールドの幅を指定して、配置を指定します。 次のようにフィールドの幅が正数の場合、フィールドは右揃えになります。\n\n```text\n{expression, width}\n```\n\n次のようにフィールドの幅が負数の場合、フィールドは左揃えになります。\n\n```text\n{expression, -width}\n```\n`{\"Item\",-25}` と `{item.Key,-25}` の挿入式から負号を削除してみて、例を再実行します。 この場合、項目名は右揃えになります。\n\nフィールドの幅と書式指定文字列を組み合わせて単一の挿入式にまとめることができます。 最初にフィールドの幅が配置され、その後にコロンと書式指定文字列が続きます。 フィールド幅が定義された 3 つの書式指定された文字列を表示する、次の簡単なプログラムを試します。\n\n```csharp\nConsole.WriteLine($\"{DateTime.Now,-20:d} Hour {DateTime.Now,-10:HH} {1063.342,15:N2} feet\");\n```\n\n> [!NOTE]\n> このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。\n"
-- content: "挿入文字列のクイックスタートはこれで終了です。 \n\nこれまでのクイックスタートを、ご自身のローカル開発環境でも引き続き使用できます。 [ローカル開発](local-environment.md)の基本を学習してから、クイックスタートを選択してください。 これと同じ演習を試すことも、次のクイックスタートに直接移動することも、再度「[C# の数値](numbers-in-csharp-local.md)」クイック スタートから始めることもできます。\n\n挿入文字列の詳細については、C# リファレンスの「[文字列補間](../language-reference/tokens/interpolated.md)」トピックで学習できます。"
+  content: >
+    通常、挿入式の結果が文字列に書式設定される場合、文字列は先頭スペースおよび末尾スペースなしで結果文字列に含まれます。 通常、データのセットを操作する場合、フィールドの幅とテキストの配置を制御できることで、読みやすい出力を生成できます。 そのためには、次のコードを実行します。
+
+
+    ```csharp
+      var inventory = new Dictionary<string, int>()
+      {
+          ["hammer, ball pein"] = 18,
+          ["hammer, cross pein"] = 5,
+          ["screwdriver, Phillips #2"] = 14
+      };
+
+      Console.WriteLine($"Inventory on {DateTime.Now:d}");
+      Console.WriteLine(" ");
+      Console.WriteLine($"|{"Item",-25}|{"Quantity",10}|");
+      foreach (var item in inventory)
+         Console.WriteLine($"|{item.Key,-25}|{item.Value,10}|");
+    ```
+
+
+    項目名は左揃えになり、その数量は右揃えになります。 挿入式の後にコンマ (",") を追加し、*最小*のフィールド幅を指定して、配置を指定します。 指定された値が正数の場合、フィールドは右揃えになります。 負数の場合、フィールドは左揃えになります。
+
+
+    `{"Item",-25}` と `{item.Key,-25}` のコードから負号を削除してみて、もう一度例を実行します。 この場合、項目名は右揃えになります。
+
+
+    単一の挿入式にアラインメント指定子と書式指定文字列を組み合わせることができます。 この操作を行うには、最初に配置を指定して、その後にコロンと書式指定文字列を続けます。 フィールド幅が定義された 3 つの書式指定された文字列を表示する、次のコードを試します。
+
+
+    ```csharp
+
+    Console.WriteLine($"[{DateTime.Now,-20:d}] Hour [{DateTime.Now,-10:HH}] [{1063.342,15:N2}] feet");
+
+    ```
+
+
+    > [!NOTE]
+
+    > このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。
+- content: "文字列補間のクイックスタートはこれで終了です。 \n\nこれまでのクイックスタートを、ご自身のローカル開発環境でも使い続けることができます。 [ローカル開発](local-environment.md)の基本を学習してから、クイックスタートを選択してください。 これと同じクイックスタートを試すことも、次のクイックスタートに直接移動することも、もう一度「[C# の数値](numbers-in-csharp-local.md)」のクイックスタートから始めることもできます。\n\n文字列補間の詳細については、C# リファレンスの[文字列補間](../language-reference/tokens/interpolated.md)に関するページを参照してください。"
